@@ -21,28 +21,18 @@ package io.meeds.news.service.impl;
 
 import static io.meeds.news.utils.NewsUtils.NewsObjectType.ARTICLE;
 import static io.meeds.news.utils.NewsUtils.NewsObjectType.LATEST_DRAFT;
-import static io.meeds.news.utils.NewsUtils.NewsUpdateType.CONTENT;
+import static io.meeds.news.utils.NewsUtils.NewsUpdateType.CONTENT_AND_TITLE;
 
-import java.io.FileInputStream;
-import java.io.InputStream;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.OffsetTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.TimeZone;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.stream.Stream;
 
+import io.meeds.notes.model.NotePageProperties;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -50,9 +40,6 @@ import org.apache.commons.lang3.StringUtils;
 import org.exoplatform.commons.api.notification.NotificationContext;
 import org.exoplatform.commons.api.notification.model.PluginKey;
 import org.exoplatform.commons.exception.ObjectNotFoundException;
-import org.exoplatform.commons.file.model.FileItem;
-import org.exoplatform.commons.file.services.FileService;
-import org.exoplatform.commons.file.services.FileStorageException;
 import org.exoplatform.commons.notification.impl.NotificationContextImpl;
 import org.exoplatform.commons.search.index.IndexingService;
 import org.exoplatform.commons.utils.CommonsUtils;
@@ -61,7 +48,6 @@ import org.exoplatform.services.log.ExoLogger;
 import org.exoplatform.services.log.Log;
 import org.exoplatform.services.security.ConversationState;
 import org.exoplatform.services.security.Identity;
-import org.exoplatform.services.security.IdentityConstants;
 import org.exoplatform.social.common.RealtimeListAccess;
 import org.exoplatform.social.core.activity.model.ExoSocialActivity;
 import org.exoplatform.social.core.activity.model.ExoSocialActivityImpl;
@@ -78,8 +64,6 @@ import org.exoplatform.social.metadata.model.MetadataKey;
 import org.exoplatform.social.metadata.model.MetadataObject;
 import org.exoplatform.social.metadata.model.MetadataType;
 import org.exoplatform.social.notification.LinkProviderUtils;
-import org.exoplatform.upload.UploadResource;
-import org.exoplatform.upload.UploadService;
 import org.exoplatform.wiki.WikiException;
 import org.exoplatform.wiki.model.DraftPage;
 import org.exoplatform.wiki.model.Page;
@@ -87,6 +71,7 @@ import org.exoplatform.wiki.model.PageVersion;
 import org.exoplatform.wiki.model.Wiki;
 import org.exoplatform.wiki.model.WikiType;
 import org.exoplatform.wiki.service.NoteService;
+import org.exoplatform.wiki.service.PageUpdateType;
 import org.exoplatform.wiki.service.WikiService;
 
 import io.meeds.news.filter.NewsFilter;
@@ -107,7 +92,12 @@ import io.meeds.news.service.NewsService;
 import io.meeds.news.service.NewsTargetingService;
 import io.meeds.news.utils.NewsUtils;
 import io.meeds.news.utils.NewsUtils.NewsObjectType;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Primary;
+import org.springframework.stereotype.Service;
 
+@Primary
+@Service
 public class NewsServiceImpl implements NewsService {
 
   public static final String         NEWS_ARTICLES_ROOT_NOTE_PAGE_NAME      = "Articles";
@@ -121,14 +111,6 @@ public class NewsServiceImpl implements NewsService {
   public static final String         NEWS_METADATA_NAME                     = "news";
 
   public static final String         NEWS_METADATA_DRAFT_OBJECT_TYPE        = "newsDraftPage";
-
-  public static final String         NEWS_FILE_API_NAME_SPACE               = "news";
-
-  public static final String         NEWS_SUMMARY                           = "summary";
-
-  public static final String         NEWS_ILLUSTRATION_ID                   = "illustrationId";
-
-  public static final String         NEWS_UPLOAD_ID                         = "uploadId";
 
   /** The Constant PUBLISHED. */
   public final static String         PUBLISHED                              = "published";
@@ -187,51 +169,33 @@ public class NewsServiceImpl implements NewsService {
 
   private static final Log           LOG                                    = ExoLogger.getLogger(NewsServiceImpl.class);
 
-  private final SpaceService         spaceService;
+  @Autowired
+  private SpaceService          spaceService;
 
-  private final NoteService          noteService;
+  @Autowired
+  private NoteService           noteService;
 
-  private final MetadataService      metadataService;
+  @Autowired
+  private MetadataService       metadataService;
 
-  private final FileService          fileService;
 
-  private final UploadService        uploadService;
+  @Autowired
+  private NewsTargetingService  newsTargetingService;
 
-  private final NewsTargetingService newsTargetingService;
+  @Autowired
+  private IndexingService       indexingService;
 
-  private final IndexingService      indexingService;
+  @Autowired
+  private IdentityManager       identityManager;
 
-  private final IdentityManager      identityManager;
+  @Autowired
+  private ActivityManager       activityManager;
 
-  private final ActivityManager      activityManager;
+  @Autowired
+  private WikiService           wikiService;
 
-  private final WikiService          wikiService;
-
-  private final NewsSearchConnector  newsSearchConnector;
-
-  public NewsServiceImpl(SpaceService spaceService,
-                         NoteService noteService,
-                         MetadataService metadataService,
-                         FileService fileService,
-                         NewsTargetingService newsTargetingService,
-                         IndexingService indexingService,
-                         IdentityManager identityManager,
-                         ActivityManager activityManager,
-                         WikiService wikiService,
-                         UploadService uploadService,
-                         NewsSearchConnector newsSearchConnector) {
-    this.spaceService = spaceService;
-    this.noteService = noteService;
-    this.metadataService = metadataService;
-    this.fileService = fileService;
-    this.uploadService = uploadService;
-    this.newsTargetingService = newsTargetingService;
-    this.indexingService = indexingService;
-    this.identityManager = identityManager;
-    this.activityManager = activityManager;
-    this.wikiService = wikiService;
-    this.newsSearchConnector = newsSearchConnector;
-  }
+  @Autowired
+  private NewsSearchConnector newsSearchConnector;
 
   /**
    * {@inheritDoc}
@@ -291,14 +255,6 @@ public class NewsServiceImpl implements NewsService {
    * {@inheritDoc}
    */
   @Override
-  public News updateNews(News news, String updater, Boolean post, boolean publish) throws Exception {
-    return null;
-  }
-
-  /**
-   * {@inheritDoc}
-   */
-  @Override
   public News updateNews(News news,
                          String updater,
                          Boolean post,
@@ -310,7 +266,8 @@ public class NewsServiceImpl implements NewsService {
       throw new IllegalAccessException("User " + updater + " is not authorized to update news");
     }
     Identity updaterIdentity = NewsUtils.getUserIdentity(updater);
-    News originalNews = getNewsById(news.getId(), updaterIdentity, false, newsObjectType);
+    String newsId = news.getTargetPageId() != null ? news.getTargetPageId() : news.getId();
+    News originalNews = getNewsById(newsId, updaterIdentity, false, newsObjectType);
     List<String> oldTargets = newsTargetingService.getTargetsByNews(news);
     boolean canPublish = NewsUtils.canPublishNews(news.getSpaceId(), updaterIdentity);
     Set<String> previousMentions = NewsUtils.processMentions(originalNews.getOriginalBody(),
@@ -320,12 +277,15 @@ public class NewsServiceImpl implements NewsService {
     } else if (LATEST_DRAFT.name().toLowerCase().equals(newsObjectType)) {
       return createOrUpdateDraftForExistingPage(news, updater);
     }
+    else if (ARTICLE.name().equalsIgnoreCase(newsObjectType) && CONTENT_AND_TITLE.name().equalsIgnoreCase(newsUpdateType) && StringUtils.isNotEmpty(news.getLang())) {
+      return addNewArticleVersionWithLang(news, updaterIdentity);
+    }
     if (publish != news.isPublished() && news.isCanPublish()) {
       news.setPublished(publish);
       if (news.isPublished()) {
         publishNews(news, updater);
       } else {
-        unpublishNews(news.getId(), updater);
+        unpublishNews(newsId, updater);
       }
     }
     boolean displayed = !(StringUtils.equals(news.getPublicationState(), STAGED));
@@ -349,7 +309,7 @@ public class NewsServiceImpl implements NewsService {
 
     if (POSTED.equals(news.getPublicationState())) {
       // Send mention notifs
-      if (StringUtils.isNotEmpty(news.getId()) && news.getCreationDate() != null) {
+      if (StringUtils.isNotEmpty(newsId) && news.getCreationDate() != null) {
         News newMentionedNews = news;
         if (!previousMentions.isEmpty()) {
           // clear old mentions from news body before sending a custom object to
@@ -359,7 +319,7 @@ public class NewsServiceImpl implements NewsService {
         }
         sendNotification(updater, newMentionedNews, NotificationConstants.NOTIFICATION_CONTEXT.MENTION_IN_NEWS);
       }
-      indexingService.reindex(NewsIndexingServiceConnector.TYPE, String.valueOf(news.getId()));
+      indexingService.reindex(NewsIndexingServiceConnector.TYPE, String.valueOf(newsId));
     }
     if (!news.getPublicationState().isEmpty() && !DRAFT.equals(news.getPublicationState())) {
       if (post != null) {
@@ -380,7 +340,7 @@ public class NewsServiceImpl implements NewsService {
       throw new IllegalAccessException("User " + currentIdentity.getUserId() + " is not authorized to delete news");
     }
     if (NewsObjectType.DRAFT.name().toLowerCase().equals(newsObjectType)) {
-      deleteDraftArticle(newsId, currentIdentity.getUserId(), true);
+      deleteDraftArticle(newsId, currentIdentity.getUserId());
     } else if (LATEST_DRAFT.name().toLowerCase().equals(newsObjectType)) {
       Page newsArticlePage = noteService.getNoteById(newsId);
       if (newsArticlePage != null) {
@@ -391,8 +351,7 @@ public class NewsServiceImpl implements NewsService {
           // check if the latest draft has the same illustration
           // with the news article to do not remove it.
           deleteDraftArticle(draft.getId(),
-                             currentIdentity.getUserId(),
-                             !isSameIllustration(draft.getId(), newsArticlePage.getId()));
+                             currentIdentity.getUserId());
         }
       }
     } else {
@@ -404,6 +363,10 @@ public class NewsServiceImpl implements NewsService {
       MetadataObject newsMetadataObject = new MetadataObject(NewsUtils.NEWS_METADATA_OBJECT_TYPE, newsId);
       metadataService.deleteMetadataItemsByObject(newsMetadataObject);
       indexingService.unindex(NewsIndexingServiceConnector.TYPE, String.valueOf(news.getId()));
+      List<String> articleLanguages = getArticleLanguages(newsId, false);
+      if (CollectionUtils.isNotEmpty(articleLanguages)) {
+        articleLanguages.forEach(lang -> indexingService.unindex(NewsIndexingServiceConnector.TYPE, news.getId().concat("-").concat(lang)));
+      }
       NewsUtils.broadcastEvent(NewsUtils.DELETE_NEWS, currentIdentity.getUserId(), news);
     }
   }
@@ -436,15 +399,19 @@ public class NewsServiceImpl implements NewsService {
       Date updatedDate = Calendar.getInstance().getTime();
       metadataItem.setUpdatedDate(updatedDate.getTime());
       String publisherId = identityManager.getOrCreateUserIdentity(publisherIdentity.getUserId()).getId();
-      metadataService.updateMetadataItem(metadataItem, Long.parseLong(publisherId));
+      metadataService.updateMetadataItem(metadataItem, Long.parseLong(publisherId), false);
     }
     if (newsToPublish.getTargets() != null) {
       newsTargetingService.deleteNewsTargets(news, publisher);
       newsTargetingService.saveNewsTarget(news, displayed, newsToPublish.getTargets(), publisher);
     }
+    news.setAudience(newsToPublish.getAudience());
     NewsUtils.broadcastEvent(NewsUtils.PUBLISH_NEWS, news.getId(), news);
+    Space space = spaceService.getSpaceById(news.getSpaceId());
+    Map<String, Object> shareArticleEventListenerData = new HashMap<>();
+    shareArticleEventListenerData.putAll(Map.of(NEWS_ATTACHMENTS_IDS, getArticleAttachmentIdsToShare(Long.parseLong(news.getSpaceId()), Long.parseLong(newsPageObject.getId())),"space", space, NEWS_AUDIENCE, news.getAudience(),ARTICLE_CONTENT, news.getBody()));
+    NewsUtils.broadcastEvent(NewsUtils.SHARE_CONTENT_ATTACHMENTS,this, shareArticleEventListenerData);
     try {
-      news.setAudience(newsToPublish.getAudience());
       sendNotification(publisher, news, NotificationConstants.NOTIFICATION_CONTEXT.PUBLISH_NEWS);
     } catch (Error | Exception e) {
       LOG.warn("Error sending notification when publishing news with Id " + news.getId(), e);
@@ -478,24 +445,8 @@ public class NewsServiceImpl implements NewsService {
       Date updatedDate = Calendar.getInstance().getTime();
       newsMetadataItem.setUpdatedDate(updatedDate.getTime());
       String publisherId = identityManager.getOrCreateUserIdentity(publisher).getId();
-      metadataService.updateMetadataItem(newsMetadataItem, Long.parseLong(publisherId));
+      metadataService.updateMetadataItem(newsMetadataItem, Long.parseLong(publisherId), false);
     }
-  }
-
-  /**
-   * {@inheritDoc}
-   */
-  @Override
-  public News getNewsById(String newsId, boolean editMode) throws Exception {
-    return null;
-  }
-
-  /**
-   * {@inheritDoc}
-   */
-  @Override
-  public News getNewsById(String newsId, Identity currentIdentity, boolean editMode) throws IllegalAccessException {
-    return null;
   }
 
   /**
@@ -506,17 +457,29 @@ public class NewsServiceImpl implements NewsService {
                           Identity currentIdentity,
                           boolean editMode,
                           String newsObjectType) throws IllegalAccessException {
+    return getNewsByIdAndLang(newsId, currentIdentity, editMode, newsObjectType, null);
+  }
+
+  /**
+   * {@inheritDoc}
+   */
+  @Override
+  public News getNewsByIdAndLang(String newsId,
+                          Identity currentIdentity,
+                          boolean editMode,
+                          String newsObjectType,
+                          String lang) throws IllegalAccessException {
     News news = null;
     try {
       if (newsObjectType == null) {
         throw new IllegalArgumentException("Required argument news object type could not be null");
       }
-      if (NewsObjectType.DRAFT.name().toLowerCase().equals(newsObjectType)) {
+      if (NewsObjectType.DRAFT.name().equalsIgnoreCase(newsObjectType)) {
         news = buildDraftArticle(newsId, currentIdentity.getUserId());
-      } else if (LATEST_DRAFT.name().toLowerCase().equals(newsObjectType)) {
-        news = buildLatestDraftArticle(newsId, currentIdentity.getUserId());
-      } else if (ARTICLE.name().toLowerCase().equals(newsObjectType)) {
-        news = buildArticle(newsId);
+      } else if (LATEST_DRAFT.name().equalsIgnoreCase(newsObjectType)) {
+        news = buildLatestDraftArticle(newsId, currentIdentity.getUserId(), lang);
+      } else if (ARTICLE.name().equalsIgnoreCase(newsObjectType)) {
+        news = buildArticle(newsId, lang, true);
       }
     } catch (Exception exception) {
       LOG.error("An error occurred while retrieving news with id {}", newsId, exception);
@@ -550,9 +513,14 @@ public class NewsServiceImpl implements NewsService {
 
   @Override
   public News getNewsArticleById(String newsId) {
+    return getNewsArticleByIdAndLang(newsId, null);
+  }
+
+  @Override
+  public News getNewsArticleByIdAndLang(String newsId, String lang) {
     News news = null;
     try {
-      news = buildArticle(newsId);
+      news = buildArticle(newsId, lang, true);
       news.setTargets(newsTargetingService.getTargetsByNews(news));
     } catch (Exception exception) {
       LOG.error("An error occurred while retrieving news with id {}", newsId, exception);
@@ -602,7 +570,7 @@ public class NewsServiceImpl implements NewsService {
                                        newsTargetingService.getNewsTargetItemsByTargetName(targetName, newsFilter.getOffset(), 0);
     return newsTargetItems.stream().filter(target -> {
       try {
-        News news = getNewsById(target.getObjectId(), currentIdentity, false, ARTICLE.name().toLowerCase());
+        News news = getNewsArticleById(target.getObjectId());
         return news != null
             && (StringUtils.isEmpty(news.getAudience()) || news.getAudience().equals(NewsUtils.ALL_NEWS_AUDIENCE) || news.isSpaceMember());
       } catch (Exception e) {
@@ -610,9 +578,8 @@ public class NewsServiceImpl implements NewsService {
       }
     }).map(target -> {
       try {
-        News news = getNewsById(target.getObjectId(), currentIdentity, false, ARTICLE.name().toLowerCase());
+        News news = getNewsByIdAndLang(target.getObjectId(), currentIdentity, false, ARTICLE.name().toLowerCase(), newsFilter.getLang());
         news.setPublishDate(new Date(target.getCreatedDate()));
-        news.setIllustration(null);
         return news;
       } catch (Exception e) {
         return null;
@@ -667,7 +634,7 @@ public class NewsServiceImpl implements NewsService {
         }
         metadataItem.setProperties(properties);
         String userIdentityId = identityManager.getOrCreateUserIdentity(userId).getId();
-        metadataService.updateMetadataItem(metadataItem, Long.parseLong(userIdentityId));
+        metadataService.updateMetadataItem(metadataItem, Long.parseLong(userIdentityId), false);
       }
     } catch (Exception exception) {
       LOG.error("Failed to mark news article " + news.getId() + " as read for current user", exception);
@@ -698,6 +665,12 @@ public class NewsServiceImpl implements NewsService {
   @Override
   public News getNewsByActivityId(String activityId, Identity currentIdentity) throws IllegalAccessException,
                                                                                ObjectNotFoundException {
+    return getNewsByActivityIdAndLang(activityId, currentIdentity, null);
+  }
+
+  @Override
+  public News getNewsByActivityIdAndLang(String activityId, Identity currentIdentity, String lang) throws IllegalAccessException,
+                                                                                      ObjectNotFoundException {
     ExoSocialActivity activity = activityManager.getActivity(activityId);
     if (activity == null) {
       throw new ObjectNotFoundException("Activity with id " + activityId + " wasn't found");
@@ -721,13 +694,12 @@ public class NewsServiceImpl implements NewsService {
           throw new IllegalAccessException("Shared Activity '" + activityId + "' Poster " + activity.getPosterId()
               + " isn't found");
         }
-        return getNewsByActivityId(originalActivityId, NewsUtils.getUserIdentity(sharedActivityPosterIdentity.getRemoteId()));
+        return getNewsByActivityIdAndLang(originalActivityId, NewsUtils.getUserIdentity(sharedActivityPosterIdentity.getRemoteId()), lang);
       }
       throw new ObjectNotFoundException("Activity with id " + activityId + " isn't of type news nor a shared news");
     }
-    return getNewsById(newsId, currentIdentity, false, ARTICLE.name().toLowerCase());
+    return getNewsByIdAndLang(newsId, currentIdentity, false, ARTICLE.name().toLowerCase(), lang);
   }
-
   /**
    * {@inheritDoc}
    */
@@ -747,10 +719,12 @@ public class NewsServiceImpl implements NewsService {
       updateNewsArticle(news, currentIdentity, NewsUtils.NewsUpdateType.SCHEDULE.name().toLowerCase());
     }
     if (news != null) {
-      if (news.isPublished()) {
-        publishNews(news, currentIdentity.getUserId());
-      } else {
-        unpublishNews(news.getId(), currentIdentity.getUserId());
+      if (NewsUtils.canPublishNews(space.getId(), currentIdentity)) {
+        if (news.isPublished()) {
+          publishNews(news, currentIdentity.getUserId());
+        } else {
+          unpublishNews(news.getId(), currentIdentity.getUserId());
+        }
       }
       // set the url and the space url to the scheduled news
       news.setUrl(NewsUtils.buildNewsArticleUrl(news, currentIdentity.getUserId()));
@@ -767,36 +741,7 @@ public class NewsServiceImpl implements NewsService {
   public News unScheduleNews(News news, String pageOwnerId, String articleCreator) throws Exception {
     News existingNews = getNewsArticleById(news.getId());
     if (existingNews != null) {
-      Map<String, String> illustrationInfo = getArticleIllustrationInfo(news);
-
-      news.setId(null);
-      news.setUploadId(null);
       news = createDraftArticleForNewPage(news, pageOwnerId, articleCreator, System.currentTimeMillis());
-
-      if (!MapUtils.isEmpty(illustrationInfo)) {
-        MetadataItem draftMetadataItem =
-                                       metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                           new NewsDraftObject(NEWS_METADATA_DRAFT_OBJECT_TYPE,
-                                                                                                               news.getId(),
-                                                                                                               null,
-                                                                                                               Long.parseLong(news.getSpaceId())))
-                                                      .stream()
-                                                      .findFirst()
-                                                      .orElse(null);
-        Map<String, String> draftProperties = draftMetadataItem.getProperties();
-        if (draftProperties == null) {
-          draftProperties = new HashMap<>();
-        }
-        if (illustrationInfo.get(NEWS_UPLOAD_ID) != null) {
-          draftProperties.put(NEWS_UPLOAD_ID, illustrationInfo.get(NEWS_UPLOAD_ID));
-        }
-        if (illustrationInfo.get(NEWS_ILLUSTRATION_ID) != null) {
-          draftProperties.put(NEWS_ILLUSTRATION_ID, illustrationInfo.get(NEWS_ILLUSTRATION_ID));
-        }
-        draftMetadataItem.setProperties(draftProperties);
-        String draftArticleMetadataItemUpdaterIdentityId = identityManager.getOrCreateUserIdentity(articleCreator).getId();
-        metadataService.updateMetadataItem(draftMetadataItem, Long.parseLong(draftArticleMetadataItemUpdaterIdentityId));
-      }
       deleteArticle(existingNews, articleCreator);
       return buildDraftArticle(news.getId(), articleCreator);
     }
@@ -893,39 +838,26 @@ public class NewsServiceImpl implements NewsService {
       }
 
       metadataItem.setProperties(properties);
-      metadataService.updateMetadataItem(metadataItem, Long.parseLong(userIdentity.getId()));
+      metadataService.updateMetadataItem(metadataItem, Long.parseLong(userIdentity.getId()), false);
 
-      NewsUtils.broadcastEvent(NewsUtils.SHARE_CONTENT_ATTACHMENTS,
-                               Map.of(NEWS_ATTACHMENTS_IDS,
-                                      getArticleAttachmentIdsToShare(news,
-                                                                     Long.parseLong(space.getId()),
-                                                                     Long.parseLong(newsPageObject.getId())),
-                                      ARTICLE_CONTENT,
-                                      news.getBody()),
-                               space);
+      Map<String, Object> shareArticleEventListenerData = new HashMap<>();
+      shareArticleEventListenerData.put(NEWS_ATTACHMENTS_IDS, getArticleAttachmentIdsToShare(
+              Long.parseLong(space.getId()),
+              Long.parseLong(newsPageObject.getId())));
+      shareArticleEventListenerData.putAll(Map.of("space", space, NEWS_AUDIENCE, news.getAudience(),ARTICLE_CONTENT, news.getBody()));
+      NewsUtils.broadcastEvent(NewsUtils.SHARE_CONTENT_ATTACHMENTS,this, shareArticleEventListenerData);
       NewsUtils.broadcastEvent(NewsUtils.SHARE_NEWS, userIdentity.getRemoteId(), news);
     }
 
   }
 
-  private List<String> getArticleAttachmentIdsToShare(News article, long spaceId, long articlePageId) {
-    List<String> attachmentIds = new ArrayList<>();
-    PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(articlePageId, null);
-    NewsPageVersionObject newsPageVersionObject = new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
-                                                                            pageVersion.getId(),
-                                                                            null,
-                                                                            spaceId);
-    List<MetadataItem> newsPageVersionMetadataItems = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                                          newsPageVersionObject);
-    Map<String, String> newsPageVersionMetadataItemProperties = newsPageVersionMetadataItems.get(0).getProperties();
-    if (!MapUtils.isEmpty(newsPageVersionMetadataItems.get(0).getProperties())) {
-
-      if (newsPageVersionMetadataItemProperties.containsKey(NEWS_ATTACHMENTS_IDS)
-          && newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS) != null) {
-        attachmentIds.addAll(List.of(newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS).split(";")));
-      }
-    }
-    return attachmentIds;
+  @Override
+  public void deleteVersionsByArticleIdAndLang(String id, String lang) throws Exception {
+    News article = getNewsArticleById(id);
+    noteService.deleteVersionsByNoteIdAndLang(Long.parseLong(id), lang);
+    NewsUtils.broadcastEvent(NewsUtils.REMOVE_ARTICLE_TRANSLATION, article.getAuthor(), article);
+    String newsTranslationId = id.concat("-").concat(lang);
+    indexingService.unindex(NewsIndexingServiceConnector.TYPE, newsTranslationId);
   }
 
   /**
@@ -961,8 +893,16 @@ public class NewsServiceImpl implements NewsService {
       draftArticlePage.setContent(draftArticle.getBody());
       draftArticlePage.setParentPageId(newsArticlesRootNotePage.getId());
       draftArticlePage.setAuthor(draftArticle.getAuthor());
-      draftArticlePage = noteService.createDraftForNewPage(draftArticlePage, creationDate);
+      draftArticlePage.setProperties(draftArticle.getProperties());
+      draftArticlePage =
+                       noteService.createDraftForNewPage(draftArticlePage,
+                                                         creationDate,
+                                                         Long.parseLong(identityManager.getOrCreateUserIdentity(draftArticleCreator)
+                                                                                       .getId()));
 
+
+      draftArticle.setProperties(draftArticlePage.getProperties());
+      draftArticle.setIllustrationURL(NewsUtils.buildIllustrationUrl(draftArticle.getProperties(), draftArticlePage.getLang()));
       draftArticle.setId(draftArticlePage.getId());
       draftArticle.setCreationDate(draftArticlePage.getCreatedDate());
       draftArticle.setUpdateDate(draftArticlePage.getUpdatedDate());
@@ -974,20 +914,11 @@ public class NewsServiceImpl implements NewsService {
                                                                        Long.parseLong(draftArticleSpace.getId()));
       String draftArticleMetadataItemCreatorIdentityId = identityManager.getOrCreateUserIdentity(draftArticleCreator).getId();
       Map<String, String> draftArticleMetadataItemProperties = new HashMap<>();
-      // save illustration
-      if (StringUtils.isNotEmpty(draftArticle.getUploadId())) {
-        Long draftArticleIllustrationId = saveArticleIllustration(draftArticle.getUploadId(), null);
-        setArticleIllustration(draftArticle, draftArticleIllustrationId, NewsObjectType.DRAFT.name());
-        draftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, String.valueOf(draftArticleIllustrationId));
-        draftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, draftArticle.getUploadId());
-      }
-      if (StringUtils.isNotEmpty(draftArticle.getSummary())) {
-        draftArticleMetadataItemProperties.put(NEWS_SUMMARY, draftArticle.getSummary());
-      }
       metadataService.createMetadataItem(draftArticleMetaDataObject,
                                          NEWS_METADATA_KEY,
                                          draftArticleMetadataItemProperties,
-                                         Long.parseLong(draftArticleMetadataItemCreatorIdentityId));
+                                         Long.parseLong(draftArticleMetadataItemCreatorIdentityId),
+                                         false);
 
       return draftArticle;
     }
@@ -1033,6 +964,7 @@ public class NewsServiceImpl implements NewsService {
       newsArticlePage.setParentPageId(newsArticlesRootNotePage.getId());
       newsArticlePage.setAuthor(newsArticle.getAuthor());
       newsArticlePage.setLang(null);
+      newsArticlePage.setProperties(newsArticle.getProperties());
       newsArticlePage = noteService.createNote(wiki, newsArticlesRootNotePage.getName(), newsArticlePage, poster);
       // create the version
       noteService.createVersionOfNote(newsArticlePage, poster.getUserId());
@@ -1040,7 +972,10 @@ public class NewsServiceImpl implements NewsService {
         PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(newsArticlePage.getId()), null);
         // set properties
         newsArticle.setId(newsArticlePage.getId());
+        newsArticle.setLang(newsArticlePage.getLang());
         newsArticle.setCreationDate(pageVersion.getCreatedDate());
+        newsArticle.setProperties(newsArticlePage.getProperties());
+        newsArticle.setIllustrationURL(NewsUtils.buildIllustrationUrl(newsArticlePage.getProperties(), newsArticle.getLang()));
 
         NewsPageVersionObject newsArticleVersionMetaDataObject = new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
                                                                                            pageVersion.getId(),
@@ -1049,36 +984,12 @@ public class NewsServiceImpl implements NewsService {
         String newsArticleMetadataItemCreatorIdentityId = identityManager.getOrCreateUserIdentity(newsArticleCreator).getId();
         Map<String, String> newsArticleVersionMetadataItemProperties = new HashMap<>();
 
-        NewsDraftObject newsDraftObject = new NewsDraftObject(NEWS_METADATA_DRAFT_OBJECT_TYPE,
-                                                              draftNewsId,
-                                                              null,
-                                                              Long.parseLong(space.getId()));
-        MetadataItem draftMetadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, newsDraftObject)
-                                                        .stream()
-                                                        .findFirst()
-                                                        .orElse(null);
-
-        if (draftMetadataItem != null && draftMetadataItem.getProperties() != null
-            && !draftMetadataItem.getProperties().isEmpty()) {
-          if (draftMetadataItem.getProperties().containsKey(NEWS_UPLOAD_ID)) {
-            newsArticleVersionMetadataItemProperties.put(NEWS_UPLOAD_ID, draftMetadataItem.getProperties().get(NEWS_UPLOAD_ID));
-          }
-          if (draftMetadataItem.getProperties().containsKey(NEWS_ILLUSTRATION_ID)) {
-            newsArticleVersionMetadataItemProperties.put(NEWS_ILLUSTRATION_ID,
-                                                         draftMetadataItem.getProperties().get(NEWS_ILLUSTRATION_ID));
-            setArticleIllustration(newsArticle,
-                                   Long.parseLong(newsArticleVersionMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)),
-                                   ARTICLE.name().toLowerCase());
-          }
-        }
         // create the page version metadata item
-        if (StringUtils.isNotEmpty(newsArticle.getSummary())) {
-          newsArticleVersionMetadataItemProperties.put(NEWS_SUMMARY, newsArticle.getSummary());
-        }
         metadataService.createMetadataItem(newsArticleVersionMetaDataObject,
                                            NEWS_METADATA_KEY,
                                            newsArticleVersionMetadataItemProperties,
-                                           Long.parseLong(newsArticleMetadataItemCreatorIdentityId));
+                                           Long.parseLong(newsArticleMetadataItemCreatorIdentityId),
+                                           false);
 
         // create metadata item page
         NewsPageObject newsPageObject = new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
@@ -1101,9 +1012,10 @@ public class NewsServiceImpl implements NewsService {
         metadataService.createMetadataItem(newsPageObject,
                                            NEWS_METADATA_KEY,
                                            newsPageProperties,
-                                           Long.parseLong(newsArticleMetadataItemCreatorIdentityId));
+                                           Long.parseLong(newsArticleMetadataItemCreatorIdentityId),
+                                           false);
         // delete the draft
-        deleteDraftArticle(draftNewsId, poster.getUserId(), newsArticle.getIllustration() == null);
+        deleteDraftArticle(draftNewsId, poster.getUserId());
         return newsArticle;
       }
     }
@@ -1125,12 +1037,15 @@ public class NewsServiceImpl implements NewsService {
     draftArticlePage.setContent(draftArticle.getBody());
     draftArticlePage.setParentPageId(targetArticlePage.getParentPageId());
     draftArticlePage.setAuthor(draftArticle.getAuthor());
-    draftArticlePage.setLang(null);
+    draftArticlePage.setLang(draftArticle.getLang());
+    draftArticlePage.setProperties(draftArticle.getProperties());
 
     draftArticlePage = noteService.createDraftForExistPage(draftArticlePage, targetArticlePage, null, creationDate, updater);
 
     draftArticle.setDraftUpdateDate(draftArticlePage.getCreatedDate());
     draftArticle.setDraftUpdater(draftArticlePage.getAuthor());
+    draftArticle.setTargetPageId(draftArticlePage.getTargetPageId());
+    draftArticle.setProperties(draftArticlePage.getProperties());
     draftArticle.setId(draftArticlePage.getId());
     NewsLatestDraftObject latestDraftObject = new NewsLatestDraftObject(NEWS_METADATA_LATEST_DRAFT_OBJECT_TYPE,
                                                                         draftArticlePage.getId(),
@@ -1138,40 +1053,14 @@ public class NewsServiceImpl implements NewsService {
                                                                         Long.parseLong(draftArticle.getSpaceId()));
 
     Map<String, String> draftArticleMetadataItemProperties = new HashMap<>();
-    if (StringUtils.isNotEmpty(draftArticle.getSummary())) {
-      draftArticleMetadataItemProperties.put(NEWS_SUMMARY, draftArticle.getSummary());
-    }
     draftArticleMetadataItemProperties.put(NEWS_ACTIVITY_POSTED, String.valueOf(draftArticle.isActivityPosted()));
-    // check if the article has an illustration to link it to the created draft
-    PageVersion latestPageVersion =
-                                  noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(targetArticlePage.getId()), null);
-    if (latestPageVersion != null) {
-      // fetch the version related metadata item
-      MetadataItem pageVersionMetadataItem =
-                                           metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                               new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
-                                                                                                                         latestPageVersion.getId(),
-                                                                                                                         null,
-                                                                                                                         Long.parseLong(draftArticle.getSpaceId())))
-                                                          .stream()
-                                                          .findFirst()
-                                                          .orElse(null);
-      Map<String, String> pageVersionMetadataItemProperties = pageVersionMetadataItem.getProperties();
-      if (pageVersionMetadataItemProperties != null && !pageVersionMetadataItemProperties.isEmpty()) {
-        if (pageVersionMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)) {
-          draftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID,
-                                                 pageVersionMetadataItemProperties.get(NEWS_ILLUSTRATION_ID));
-        }
-        if (pageVersionMetadataItemProperties.containsKey(NEWS_UPLOAD_ID)) {
-          draftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, pageVersionMetadataItemProperties.get(NEWS_UPLOAD_ID));
-        }
-      }
-    }
+
     String draftArticleMetadataItemCreatorIdentityId = identityManager.getOrCreateUserIdentity(updater).getId();
     metadataService.createMetadataItem(latestDraftObject,
                                        NEWS_METADATA_KEY,
                                        draftArticleMetadataItemProperties,
-                                       Long.parseLong(draftArticleMetadataItemCreatorIdentityId));
+                                       Long.parseLong(draftArticleMetadataItemCreatorIdentityId),
+                                       false);
     return draftArticle;
   }
 
@@ -1187,7 +1076,7 @@ public class NewsServiceImpl implements NewsService {
         try {
           DraftPage latestDraftPage = noteService.getLatestDraftOfPage(articlePage, articleCreator);
           if (latestDraftPage != null) {
-            deleteDraftArticle(latestDraftPage.getId(), articleCreator, true);
+            deleteDraftArticle(latestDraftPage.getId(), articleCreator);
           } else {
             hasDraft = false;
           }
@@ -1210,7 +1099,7 @@ public class NewsServiceImpl implements NewsService {
           properties.put(NEWS_DELETED, String.valueOf(true));
           metadataItem.setProperties(properties);
           String currentIdentityId = identityManager.getOrCreateUserIdentity(articleCreator).getId();
-          metadataService.updateMetadataItem(metadataItem, Long.parseLong(currentIdentityId));
+          metadataService.updateMetadataItem(metadataItem, Long.parseLong(currentIdentityId), false);
         }
       }
     }
@@ -1220,9 +1109,18 @@ public class NewsServiceImpl implements NewsService {
    * {@inheritDoc}
    */
   @Override
-  public void deleteDraftArticle(String draftArticleId, String draftArticleCreator, boolean deleteIllustration) throws Exception {
+  public void deleteDraftArticle(String draftArticleId, String draftArticleCreator) throws Exception {
     DraftPage draftArticlePage = noteService.getDraftNoteById(draftArticleId, draftArticleCreator);
     if (draftArticlePage != null) {
+      if (draftArticlePage.getProperties() != null && draftArticlePage.getProperties().getFeaturedImage() != null) {
+        long featuredImageId = draftArticlePage.getProperties().getFeaturedImage().getId();
+        String userIdentityId = identityManager.getOrCreateUserIdentity(draftArticleCreator).getId();
+        noteService.removeNoteFeaturedImage(Long.parseLong(draftArticlePage.getId()),
+                                            featuredImageId,
+                                            null,
+                                            true,
+                                            Long.parseLong(userIdentityId));
+      }
       noteService.removeDraftById(draftArticlePage.getId());
       Space draftArticleSpace = spaceService.getSpaceByGroupId(draftArticlePage.getWikiOwner());
       MetadataObject draftArticleMetaDataObject =
@@ -1234,86 +1132,28 @@ public class NewsServiceImpl implements NewsService {
       List<MetadataItem> draftArticleMetadataItems =
                                                    metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
                                                                                                        draftArticleMetaDataObject);
-      if (draftArticleMetadataItems != null && !draftArticleMetadataItems.isEmpty()) {
-        Map<String, String> draftArticleMetadataItemProperties = draftArticleMetadataItems.get(0).getProperties();
-        if (deleteIllustration) {
-          if (draftArticleMetadataItemProperties != null && draftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-              && draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null) {
-            FileItem draftArticleIllustrationFileItem =
-                                                      fileService.getFile(Long.parseLong(draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)));
-            fileService.deleteFile(draftArticleIllustrationFileItem.getFileInfo().getId());
-          }
-        }
-        metadataService.deleteMetadataItem(draftArticleMetadataItems.get(0).getId(), false);
-      }
+      metadataService.deleteMetadataItem(draftArticleMetadataItems.getFirst().getId(), false);
     }
   }
 
+  @Override
+  public List<String> getArticleLanguages(String articleId, boolean withDrafts) throws WikiException {
+    return noteService.getPageAvailableTranslationLanguages(Long.parseLong(articleId), withDrafts);
+  }
+
   private News updateDraftArticleForNewPage(News draftArticle, String draftArticleUpdater) throws WikiException,
-                                                                                           IllegalAccessException,
-                                                                                           FileStorageException {
+                                                                                           IllegalAccessException {
     DraftPage draftArticlePage = noteService.getDraftNoteById(draftArticle.getId(), draftArticleUpdater);
     if (draftArticlePage != null) {
       draftArticlePage.setTitle(draftArticle.getTitle());
       draftArticlePage.setContent(draftArticle.getBody());
+      draftArticlePage.setProperties(draftArticle.getProperties());
       // created and updated date set by default during the draft creation
-      // process
-      draftArticlePage = noteService.updateDraftForNewPage(draftArticlePage, System.currentTimeMillis());
-      Space draftArticleSpace = spaceService.getSpaceByGroupId(draftArticlePage.getWikiOwner());
-      NewsDraftObject draftArticleMetaDataObject = new NewsDraftObject(NEWS_METADATA_DRAFT_OBJECT_TYPE,
-                                                                       draftArticlePage.getId(),
-                                                                       null,
-                                                                       Long.parseLong(draftArticleSpace.getId()));
-      List<MetadataItem> draftArticleMetadataItems =
-                                                   metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                                       draftArticleMetaDataObject);
-      if (draftArticleMetadataItems != null && !draftArticleMetadataItems.isEmpty()) {
-        MetadataItem draftArticleMetadataItem = draftArticleMetadataItems.get(0);
-        Map<String, String> draftArticleMetadataItemProperties = draftArticleMetadataItem.getProperties();
-        if (draftArticleMetadataItemProperties == null) {
-          draftArticleMetadataItemProperties = new HashMap<>();
-        }
-        // create or update the illustration
-        if (StringUtils.isNotEmpty(draftArticle.getUploadId())) {
-          if (draftArticleMetadataItemProperties.containsKey(NEWS_UPLOAD_ID)
-              && draftArticleMetadataItemProperties.get(NEWS_UPLOAD_ID) != null
-              && draftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-              && draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null) {
-            if (!draftArticleMetadataItemProperties.get(NEWS_UPLOAD_ID).equals(draftArticle.getUploadId())) {
-              FileItem draftArticleIllustrationFileItem =
-                                                        fileService.getFile(Long.parseLong(draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)));
-              Long draftArticleIllustrationId = saveArticleIllustration(draftArticle.getUploadId(),
-                                                                        draftArticleIllustrationFileItem.getFileInfo().getId());
-              draftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, String.valueOf(draftArticleIllustrationId));
-              setArticleIllustration(draftArticle, draftArticleIllustrationId, NewsObjectType.DRAFT.name());
-            }
-          } else {
-            Long draftArticleIllustrationId = saveArticleIllustration(draftArticle.getUploadId(), null);
-            draftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, String.valueOf(draftArticleIllustrationId));
-            draftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, draftArticle.getUploadId());
-            setArticleIllustration(draftArticle, draftArticleIllustrationId, NewsObjectType.DRAFT.name());
-          }
-          draftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, draftArticle.getUploadId());
-        } else {
-          if (draftArticleMetadataItemProperties.containsKey(NEWS_UPLOAD_ID)
-              && draftArticleMetadataItemProperties.get(NEWS_UPLOAD_ID) != null
-              && draftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-              && draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null && draftArticle.getUploadId() != null) {
-            draftArticleMetadataItemProperties.remove(NEWS_UPLOAD_ID);
-            FileItem draftArticleIllustrationFileItem =
-                                                      fileService.getFile(Long.parseLong(draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)));
-            draftArticleMetadataItemProperties.remove(NEWS_ILLUSTRATION_ID);
-
-            fileService.deleteFile(draftArticleIllustrationFileItem.getFileInfo().getId());
-          }
-        }
-        if (StringUtils.isNotEmpty(draftArticle.getSummary())) {
-          draftArticleMetadataItemProperties.put(NEWS_SUMMARY, draftArticle.getSummary());
-        }
-        draftArticleMetadataItem.setProperties(draftArticleMetadataItemProperties);
-        String draftArticleMetadataItemUpdaterIdentityId = identityManager.getOrCreateUserIdentity(draftArticleUpdater).getId();
-        metadataService.updateMetadataItem(draftArticleMetadataItem, Long.parseLong(draftArticleMetadataItemUpdaterIdentityId));
-      }
+      DraftPage draftPage = noteService.updateDraftForNewPage(draftArticlePage,
+                                        System.currentTimeMillis(),
+                                        Long.parseLong(identityManager.getOrCreateUserIdentity(draftArticleUpdater).getId()));
+      draftArticle.setProperties(draftPage.getProperties());
+      draftArticle.setIllustrationURL(NewsUtils.buildIllustrationUrl(draftPage.getProperties(), draftArticle.getLang()));
       return draftArticle;
     }
     return null;
@@ -1330,6 +1170,13 @@ public class NewsServiceImpl implements NewsService {
       draftArticle.setUpdateDate(draftArticlePage.getUpdatedDate());
       draftArticle.setDraftUpdateDate(draftArticlePage.getUpdatedDate());
       draftArticle.setDraftUpdaterUserName(draftArticlePage.getAuthor());
+      draftArticle.setLang(draftArticlePage.getLang());
+      draftArticle.setProperties(draftArticlePage.getProperties());
+      if (draftArticlePage.getProperties() != null && draftArticlePage.getProperties().getFeaturedImage() != null
+          && draftArticlePage.getProperties().getFeaturedImage().getId() != 0) {
+        draftArticle.setIllustrationURL(NewsUtils.buildIllustrationUrl(draftArticlePage.getProperties(),
+                                                                       draftArticlePage.getLang()));
+      }
       org.exoplatform.social.core.identity.model.Identity draftUpdaterIdentity =
                                                                                identityManager.getOrCreateUserIdentity(currentUserId);
       if (draftUpdaterIdentity != null && draftUpdaterIdentity.getProfile() != null) {
@@ -1381,21 +1228,8 @@ public class NewsServiceImpl implements NewsService {
 
   private void buildArticleVersionProperties(News article, List<MetadataItem> newsPageVersionMetadataItems) {
     if (!CollectionUtils.isEmpty(newsPageVersionMetadataItems)) {
-      Map<String, String> newsPageVersionMetadataItemProperties = newsPageVersionMetadataItems.get(0).getProperties();
+      Map<String, String> newsPageVersionMetadataItemProperties = newsPageVersionMetadataItems.getFirst().getProperties();
       if (!MapUtils.isEmpty(newsPageVersionMetadataItemProperties)) {
-        if (newsPageVersionMetadataItemProperties.containsKey(NEWS_SUMMARY)) {
-          article.setSummary(newsPageVersionMetadataItemProperties.get(NEWS_SUMMARY));
-        }
-        if (newsPageVersionMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-            && newsPageVersionMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null) {
-          setArticleIllustration(article,
-                                 Long.valueOf(newsPageVersionMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)),
-                                 ARTICLE.name().toLowerCase());
-        }
-        if (newsPageVersionMetadataItemProperties.containsKey(NEWS_UPLOAD_ID)
-            && newsPageVersionMetadataItemProperties.get(NEWS_UPLOAD_ID) != null) {
-          article.setUploadId(newsPageVersionMetadataItemProperties.get(NEWS_UPLOAD_ID));
-        }
         if (newsPageVersionMetadataItemProperties.containsKey(NEWS_ATTACHMENTS_IDS)
             && newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS) != null) {
           List<String> attachmentsIds = List.of(newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS).split(";"));
@@ -1406,7 +1240,6 @@ public class NewsServiceImpl implements NewsService {
   }
 
   private void buildArticleProperties(News article,
-                                      Page articlePage,
                                       String currentUsername,
                                       MetadataItem metadataItem) throws Exception {
     if (metadataItem != null && !MapUtils.isEmpty(metadataItem.getProperties())) {
@@ -1458,19 +1291,10 @@ public class NewsServiceImpl implements NewsService {
     if (metadataItem != null) {
       Map<String, String> draftArticleMetadataItemProperties = metadataItem.getProperties();
       if (!MapUtils.isEmpty(draftArticleMetadataItemProperties)) {
-        if (draftArticleMetadataItemProperties.containsKey(NEWS_SUMMARY)) {
-          draftArticle.setSummary(draftArticleMetadataItemProperties.get(NEWS_SUMMARY));
-        }
         if (draftArticleMetadataItemProperties.containsKey(NEWS_ACTIVITY_POSTED)) {
           draftArticle.setActivityPosted(Boolean.parseBoolean(draftArticleMetadataItemProperties.get(NEWS_ACTIVITY_POSTED)));
         } else {
           draftArticle.setActivityPosted(false);
-        }
-        if (draftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-            && draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null) {
-          setArticleIllustration(draftArticle,
-                                 Long.valueOf(draftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)),
-                                 NewsObjectType.DRAFT.name().toLowerCase());
         }
       }
       if (metadataItem.getParentObjectId() != null) {
@@ -1520,12 +1344,13 @@ public class NewsServiceImpl implements NewsService {
                           .stream()
                           .map(article -> {
                             try {
-                              return buildArticle(article.getObjectId());
+                              return buildArticle(article.getObjectId(), filter.getLang(), true);
                             } catch (Exception e) {
                               LOG.error("Error while building published news article", e);
                               return null;
                             }
                           })
+                          .filter(Objects::nonNull)
                           .toList();
   }
 
@@ -1549,12 +1374,13 @@ public class NewsServiceImpl implements NewsService {
                           .stream()
                           .map(article -> {
                             try {
-                              return buildArticle(article.getObjectId());
+                              return buildArticle(article.getObjectId(), filter.getLang(), true);
                             } catch (Exception e) {
                               LOG.error("Error while building news article", e);
                               return null;
                             }
                           })
+                          .filter(Objects::nonNull)
                           .toList();
   }
 
@@ -1570,12 +1396,13 @@ public class NewsServiceImpl implements NewsService {
                           .stream()
                           .map(article -> {
                             try {
-                              return buildArticle(article.getObjectId());
+                              return buildArticle(article.getObjectId(), filter.getLang(), true);
                             } catch (Exception e) {
                               LOG.error("Error while building news article", e);
                               return null;
                             }
                           })
+                          .filter(Objects::nonNull)
                           .toList();
   }
 
@@ -1600,12 +1427,13 @@ public class NewsServiceImpl implements NewsService {
                           .stream()
                           .map(article -> {
                             try {
-                              return buildArticle(article.getObjectId());
+                              return buildArticle(article.getObjectId(), filter.getLang(), true);
                             } catch (Exception e) {
                               LOG.error("Error while building news article", e);
                               return null;
                             }
                           })
+                          .filter(Objects::nonNull)
                           .toList();
   }
 
@@ -1633,6 +1461,7 @@ public class NewsServiceImpl implements NewsService {
                               return null;
                             }
                           })
+                          .filter(Objects::nonNull)
                           .toList();
   }
 
@@ -1649,54 +1478,6 @@ public class NewsServiceImpl implements NewsService {
     }
     return NewsUtils.canPublishNews(news.getSpaceId(), authenticatedUserIdentity)
         || spaceService.canRedactOnSpace(space, authenticatedUserIdentity);
-  }
-
-  private void setArticleIllustration(News article, Long articleIllustrationId, String newsObjectType) {
-    try {
-      FileItem articleIllustrationFileItem = fileService.getFile(articleIllustrationId);
-      if (articleIllustrationFileItem != null && !articleIllustrationFileItem.getFileInfo().isDeleted()) {
-        article.setIllustration(articleIllustrationFileItem.getAsByte());
-        article.setIllustrationMimeType(articleIllustrationFileItem.getFileInfo().getMimetype());
-        article.setIllustrationUpdateDate(articleIllustrationFileItem.getFileInfo().getUpdatedDate());
-        long lastModified = article.getIllustrationUpdateDate().getTime();
-        article.setIllustrationURL("/portal/rest/v1/news/" + article.getId() + "/illustration?v=" + lastModified + "&type="
-            + newsObjectType);
-      }
-    } catch (Exception exception) {
-      LOG.info("Failed to set article illustration");
-    }
-  }
-
-  private Long saveArticleIllustration(String articleUploadId, Long oldArticleIllustrationFileId) {
-    if (StringUtils.isEmpty(articleUploadId)) {
-      throw new IllegalArgumentException("Article uploadId is mandatory");
-    }
-    if (oldArticleIllustrationFileId != null && oldArticleIllustrationFileId != 0) {
-      fileService.deleteFile(oldArticleIllustrationFileId);
-    }
-    UploadResource articleUploadResource = uploadService.getUploadResource(articleUploadId);
-    if (articleUploadResource == null) {
-      throw new IllegalStateException("Can't find article uploaded resource with id : " + articleUploadId);
-    }
-    try {
-      InputStream articleIllustrationFileInputStream = new FileInputStream(articleUploadResource.getStoreLocation());
-      FileItem articleIllustrationFileItem = new FileItem(null,
-                                                          articleUploadResource.getFileName(),
-                                                          articleUploadResource.getMimeType(),
-                                                          NEWS_FILE_API_NAME_SPACE,
-                                                          (long) articleUploadResource.getUploadedSize(),
-                                                          new Date(),
-                                                          IdentityConstants.SYSTEM,
-                                                          false,
-                                                          articleIllustrationFileInputStream);
-      articleIllustrationFileItem = fileService.writeFile(articleIllustrationFileItem);
-      return articleIllustrationFileItem != null
-          && articleIllustrationFileItem.getFileInfo() != null ? articleIllustrationFileItem.getFileInfo().getId() : null;
-    } catch (Exception e) {
-      throw new IllegalStateException("Error while saving article illustration file", e);
-    } finally {
-      uploadService.removeUploadResource(articleUploadResource.getUploadId());
-    }
   }
 
   private boolean canDeleteNews(Identity currentIdentity, String posterId, String spaceId) {
@@ -1751,7 +1532,10 @@ public class NewsServiceImpl implements NewsService {
   private void sendNotification(String currentUserId,
                                 News news,
                                 NotificationConstants.NOTIFICATION_CONTEXT context) throws Exception {
-    String newsId = news.getId();
+    if (news.getActivities() == null || news.getActivities().isEmpty()) {
+      return;
+    }
+    String newsId = news.getTargetPageId() != null ? news.getTargetPageId() : news.getId();
     String contentAuthor = news.getAuthor();
     String currentUser = currentUserId != null ? currentUserId : contentAuthor;
     String activities = news.getActivities();
@@ -1919,7 +1703,7 @@ public class NewsServiceImpl implements NewsService {
           String updaterId = identityManager.getOrCreateUserIdentity(news.getAuthor()).getId();
           Date updateDate = Calendar.getInstance().getTime();
           metadataItem.setUpdatedDate(updateDate.getTime());
-          metadataService.updateMetadataItem(metadataItem, Long.parseLong(updaterId));
+          metadataService.updateMetadataItem(metadataItem, Long.parseLong(updaterId), false);
           news.setActivities(properties.get(NEWS_ACTIVITIES));
           news.setActivityId(activityId);
         }
@@ -1952,23 +1736,27 @@ public class NewsServiceImpl implements NewsService {
   }
 
   private News updateNewsArticle(News news, Identity updater, String newsUpdateType) throws Exception {
-    Page existingPage = noteService.getNoteById(news.getId());
+    String newsId = news.getTargetPageId() != null ? news.getTargetPageId() : news.getId();
+    Page existingPage = noteService.getNoteById(newsId);
     if (existingPage != null) {
-      if (newsUpdateType.equals(CONTENT.name().toLowerCase())) {
+      if (newsUpdateType.equals(CONTENT_AND_TITLE.name())) {
         existingPage.setTitle(news.getTitle());
         existingPage.setContent(news.getBody());
       }
-      existingPage.setUpdatedDate(Calendar.getInstance().getTime());
-      existingPage = noteService.updateNote(existingPage);
+      existingPage.setProperties(news.getProperties());
+      existingPage = noteService.updateNote(existingPage, PageUpdateType.EDIT_PAGE_CONTENT_AND_TITLE, updater);
       news.setUpdateDate(existingPage.getUpdatedDate());
       news.setUpdater(existingPage.getAuthor());
+      news.setLang(existingPage.getLang());
       news.setUpdaterFullName(existingPage.getAuthorFullName());
+      news.setProperties(existingPage.getProperties());
+      news.setIllustrationURL(NewsUtils.buildIllustrationUrl(existingPage.getProperties(), news.getLang()));
 
       String newsArticleUpdaterIdentityId = identityManager.getOrCreateUserIdentity(updater.getUserId()).getId();
 
       // update the metadata item page
       NewsPageObject newsPageObject = new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
-                                                         news.getId(),
+                                                         newsId,
                                                          null,
                                                          Long.parseLong(news.getSpaceId()));
       MetadataItem existingPageMetadataItem =
@@ -1994,62 +1782,19 @@ public class NewsServiceImpl implements NewsService {
         existingPageMetadataItem.setProperties(newsPageProperties);
         Date updateDate = Calendar.getInstance().getTime();
         existingPageMetadataItem.setUpdatedDate(updateDate.getTime());
-        metadataService.updateMetadataItem(existingPageMetadataItem, Long.parseLong(newsArticleUpdaterIdentityId));
+        metadataService.updateMetadataItem(existingPageMetadataItem, Long.parseLong(newsArticleUpdaterIdentityId), false);
       } else {
-        throw new ObjectNotFoundException("No such news article metadata item exists with id " + news.getId());
+        throw new ObjectNotFoundException("No such news article metadata item exists with id " + newsId);
       }
 
       // create the version
-      if (newsUpdateType.equals(CONTENT.name().toLowerCase())) {
+      if (newsUpdateType.equalsIgnoreCase(CONTENT_AND_TITLE.name())) {
         noteService.createVersionOfNote(existingPage, updater.getUserId());
-        PageVersion createdVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(existingPage.getId()), null);
-        // create the version metadata item
-        NewsPageVersionObject newsArticleVersionMetaDataObject = new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
-                                                                                           createdVersion.getId(),
-                                                                                           null,
-                                                                                           Long.parseLong(news.getSpaceId()));
-        Map<String, String> newsArticleVersionMetadataItemProperties = new HashMap<>();
-
-        String draftNewsId = noteService.getLatestDraftPageByUserAndTargetPageAndLang(Long.parseLong(existingPage.getId()),
-                                                                                      updater.getUserId(),
-                                                                                      null)
-                                        .getId();
-
-        NewsLatestDraftObject newsLatestDraftObject = new NewsLatestDraftObject(NEWS_METADATA_LATEST_DRAFT_OBJECT_TYPE,
-                                                                                draftNewsId,
-                                                                                existingPage.getId(),
-                                                                                Long.parseLong(news.getSpaceId()));
-        MetadataItem metadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, newsLatestDraftObject)
-                                                   .stream()
-                                                   .findFirst()
-                                                   .orElse(null);
-        if (metadataItem != null && metadataItem.getProperties() != null && !metadataItem.getProperties().isEmpty()) {
-          Map<String, String> properties = metadataItem.getProperties();
-          if (properties.containsKey(NEWS_UPLOAD_ID)) {
-            newsArticleVersionMetadataItemProperties.put(NEWS_UPLOAD_ID, properties.get(NEWS_UPLOAD_ID));
-          }
-          if (properties.containsKey(NEWS_ILLUSTRATION_ID)) {
-            newsArticleVersionMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, properties.get(NEWS_ILLUSTRATION_ID));
-            setArticleIllustration(news, Long.parseLong(properties.get(NEWS_ILLUSTRATION_ID)), ARTICLE.name().toLowerCase());
-          }
-        } else {
-          throw new ObjectNotFoundException("No such news draft article metadata item exists with id " + draftNewsId);
-        }
-        if (StringUtils.isNotEmpty(news.getSummary())) {
-          newsArticleVersionMetadataItemProperties.put(NEWS_SUMMARY, news.getSummary());
-        }
-        metadataService.createMetadataItem(newsArticleVersionMetaDataObject,
-                                           NEWS_METADATA_KEY,
-                                           newsArticleVersionMetadataItemProperties,
-                                           Long.parseLong(newsArticleUpdaterIdentityId));
-
-      }
-      // remove the draft
-      if (newsUpdateType.equalsIgnoreCase(CONTENT.name())) {
+        // remove the draft
         DraftPage draftPage = noteService.getLatestDraftPageByUserAndTargetPageAndLang(Long.parseLong(existingPage.getId()),
                                                                                        updater.getUserId(),
                                                                                        null);
-        deleteDraftArticle(draftPage.getId(), updater.getUserId(), news.getIllustration() == null);
+        deleteDraftArticle(draftPage.getId(), updater.getUserId());
       }
       return news;
     }
@@ -2057,24 +1802,26 @@ public class NewsServiceImpl implements NewsService {
   }
 
   private News buildArticle(String newsId) throws Exception {
+    return buildArticle(newsId, null, false);
+  }
+
+  private News buildArticle(String newsId, String lang, boolean fetchOriginal) throws Exception {
     if (StringUtils.isNumeric(newsId)) {
       Page articlePage = noteService.getNoteById(newsId);
       Identity userIdentity = getCurrentIdentity();
       String currentUsername = userIdentity == null ? null : userIdentity.getUserId();
       if (articlePage != null) {
         Space space = spaceService.getSpaceByGroupId(articlePage.getWikiOwner());
+        // fetch the last version of the given lang
+        PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(articlePage.getId()), lang);
+        if (pageVersion == null && fetchOriginal) {
+          pageVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(articlePage.getId()), null);
+        }
         News news = new News();
         news.setId(articlePage.getId());
         news.setCreationDate(articlePage.getCreatedDate());
-        news.setAuthor(articlePage.getAuthor());
-        news.setUpdater(articlePage.getAuthor());
-
-        // fetch related metadata item properties
-        NewsPageObject newsPageObject = new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
-                                                           articlePage.getId(),
-                                                           null,
-                                                           Long.parseLong(space.getId()));
-        MetadataItem metadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, newsPageObject).get(0);
+        news.setAuthor(pageVersion.getAuthor());
+        news.setUpdater(pageVersion.getAuthor());
         news.setSpaceId(space.getId());
         news.setSpaceAvatarUrl(space.getAvatarUrl());
         news.setSpaceDisplayName(space.getDisplayName());
@@ -2095,16 +1842,28 @@ public class NewsServiceImpl implements NewsService {
           news.setAuthorAvatarUrl(identity.getProfile().getAvatarUrl());
         }
 
-        buildArticleProperties(news, articlePage, currentUsername, metadataItem);
+        // fetch related metadata item properties
+        NewsPageObject newsPageObject = new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
+                                                           articlePage.getId(),
+                                                           null,
+                                                           Long.parseLong(space.getId()));
+        MetadataItem metadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, newsPageObject).get(0);
+        buildArticleProperties(news, currentUsername, metadataItem);
         news.setDeleted(articlePage.isDeleted());
-        news.setUrl(NewsUtils.buildNewsArticleUrl(news, currentUsername));
         news.setPublicationDate(articlePage.getCreatedDate());
-        news.setUpdateDate(new Date(metadataItem.getUpdatedDate()));
-        // fetch the last version of the given lang
-        PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(articlePage.getId()), null);
         news.setTitle(pageVersion.getTitle());
         processPageContent(pageVersion, news);
         news.setUpdaterFullName(pageVersion.getAuthorFullName());
+        news.setLang(pageVersion.getLang());
+        news.setUpdateDate(new Date(metadataItem.getUpdatedDate()));
+        news.setProperties(pageVersion.getProperties());
+        news.setUrl(NewsUtils.buildNewsArticleUrl(news, currentUsername));
+        if (news.getProperties() != null && news.getProperties().getFeaturedImage() != null
+            && news.getProperties().getFeaturedImage().getId() != 0) {
+          news.setIllustrationURL(NewsUtils.buildIllustrationUrl(news.getProperties(), pageVersion.getLang()));
+
+        }
+          
 
         NewsPageVersionObject newsPageVersionObject = new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
                                                                                 pageVersion.getId(),
@@ -2121,12 +1880,12 @@ public class NewsServiceImpl implements NewsService {
   }
 
   private News createOrUpdateDraftForExistingPage(News news, String updater) throws Exception {
-    String pageId = news.getId();
+    String pageId = news.getTargetPageId() != null ? news.getTargetPageId() : news.getId();
     Page existingPage = noteService.getNoteById(pageId);
     if (existingPage == null) {
       return null;
     }
-    DraftPage draftPage = noteService.getLatestDraftPageByUserAndTargetPageAndLang(Long.parseLong(pageId), updater, null);
+    DraftPage draftPage = noteService.getLatestDraftPageByUserAndTargetPageAndLang(Long.parseLong(pageId), updater, news.getLang());
     if (draftPage == null) {
       news = createDraftForExistingPage(news, updater, existingPage, System.currentTimeMillis());
     } else {
@@ -2141,72 +1900,38 @@ public class NewsServiceImpl implements NewsService {
       draftPage.setContent(news.getBody());
       draftPage.setAuthor(news.getAuthor());
       draftPage.setTargetPageId(page.getId());
-      draftPage.setLang(null);
+      draftPage.setLang(news.getLang());
+      draftPage.setProperties(news.getProperties());
 
       draftPage = noteService.updateDraftForExistPage(draftPage, page, null, System.currentTimeMillis(), updater);
 
       news.setDraftUpdateDate(draftPage.getUpdatedDate());
       news.setDraftUpdater(draftPage.getAuthor());
+      news.setTargetPageId(draftPage.getTargetPageId());
+      news.setProperties(draftPage.getProperties());
+      news.setIllustrationURL(NewsUtils.buildIllustrationUrl(draftPage.getProperties(), news.getLang()));
 
       NewsLatestDraftObject latestDraftObject = new NewsLatestDraftObject(NEWS_METADATA_LATEST_DRAFT_OBJECT_TYPE,
                                                                           draftPage.getId(),
                                                                           page.getId(),
                                                                           Long.parseLong(news.getSpaceId()));
 
-      List<MetadataItem> latestDraftArticleMetadataItems = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                                               latestDraftObject);
-      if (latestDraftArticleMetadataItems != null && !latestDraftArticleMetadataItems.isEmpty()) {
-        MetadataItem latestDraftArticleMetadataItem = latestDraftArticleMetadataItems.get(0);
+      MetadataItem latestDraftArticleMetadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, latestDraftObject).stream().findFirst().orElse(null);
+      if (latestDraftArticleMetadataItem != null) {
         Map<String, String> latestDraftArticleMetadataItemProperties = latestDraftArticleMetadataItem.getProperties();
         if (latestDraftArticleMetadataItemProperties == null) {
           latestDraftArticleMetadataItemProperties = new HashMap<>();
         }
-        // create or update the illustration
-        if (StringUtils.isNotEmpty(news.getUploadId())) {
-          // update the illustration if exist
-          if (latestDraftArticleMetadataItemProperties.containsKey(NEWS_UPLOAD_ID)
-              && latestDraftArticleMetadataItemProperties.get(NEWS_UPLOAD_ID) != null
-              && latestDraftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-              && latestDraftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null) {
-            if (!latestDraftArticleMetadataItemProperties.get(NEWS_UPLOAD_ID).equals(news.getUploadId())) {
-              FileItem draftArticleIllustrationFileItem =
-                                                        fileService.getFile(Long.parseLong(latestDraftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)));
-              Long draftArticleIllustrationId = saveArticleIllustration(news.getUploadId(),
-                                                                        draftArticleIllustrationFileItem.getFileInfo().getId());
-              latestDraftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, String.valueOf(draftArticleIllustrationId));
-              setArticleIllustration(news, draftArticleIllustrationId, NewsObjectType.DRAFT.name());
-            }
-          } else {
-            // create the illustration if not exist
-            Long draftArticleIllustrationId = saveArticleIllustration(news.getUploadId(), null);
-            latestDraftArticleMetadataItemProperties.put(NEWS_ILLUSTRATION_ID, String.valueOf(draftArticleIllustrationId));
-            latestDraftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, news.getUploadId());
-            setArticleIllustration(news, draftArticleIllustrationId, NewsObjectType.DRAFT.name());
-          }
-          latestDraftArticleMetadataItemProperties.put(NEWS_UPLOAD_ID, news.getUploadId());
-        } else {
-          // if the upload id is empty we should remove the existing
-          // illustration
-          if (latestDraftArticleMetadataItemProperties.containsKey(NEWS_ILLUSTRATION_ID)
-              && latestDraftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID) != null && news.getUploadId() != null) {
-            latestDraftArticleMetadataItemProperties.remove(NEWS_UPLOAD_ID);
-            FileItem draftArticleIllustrationFileItem =
-                                                      fileService.getFile(Long.parseLong(latestDraftArticleMetadataItemProperties.get(NEWS_ILLUSTRATION_ID)));
-            latestDraftArticleMetadataItemProperties.remove(NEWS_ILLUSTRATION_ID);
-
-            fileService.deleteFile(draftArticleIllustrationFileItem.getFileInfo().getId());
-          }
-        }
-        if (StringUtils.isNotEmpty(news.getSummary())) {
-          latestDraftArticleMetadataItemProperties.put(NEWS_SUMMARY, news.getSummary());
-        }
-        latestDraftArticleMetadataItemProperties.put(NEWS_ACTIVITY_POSTED, String.valueOf(news.isActivityPosted()));
+        setLatestDraftProperties(latestDraftArticleMetadataItemProperties, news);
         latestDraftArticleMetadataItem.setProperties(latestDraftArticleMetadataItemProperties);
         String draftArticleMetadataItemUpdaterIdentityId = identityManager.getOrCreateUserIdentity(updater).getId();
         metadataService.updateMetadataItem(latestDraftArticleMetadataItem,
-                                           Long.parseLong(draftArticleMetadataItemUpdaterIdentityId));
+                                           Long.parseLong(draftArticleMetadataItemUpdaterIdentityId), false);
       } else {
-        throw new ObjectNotFoundException("No metadata item found for the draft " + news.getId());
+        Map<String, String> latestDraftArticleMetadataItemProperties = new HashMap<>();
+        setLatestDraftProperties(latestDraftArticleMetadataItemProperties, news);
+        metadataService.createMetadataItem(latestDraftObject, NEWS_METADATA_KEY, latestDraftArticleMetadataItemProperties, false);
+
       }
     } catch (Exception exception) {
       return null;
@@ -2214,7 +1939,11 @@ public class NewsServiceImpl implements NewsService {
     return news;
   }
 
-  private News buildLatestDraftArticle(String parentPageId, String currentIdentityId) throws Exception {
+  private void setLatestDraftProperties(Map<String, String> properties, News news) {
+    properties.put(NEWS_ACTIVITY_POSTED, String.valueOf(news.isActivityPosted()));
+  }
+
+  private News buildLatestDraftArticle(String parentPageId, String currentIdentityId, String lang) throws Exception {
     Page parentPage = noteService.getNoteById(parentPageId);
     if (parentPage == null) {
       return null;
@@ -2222,14 +1951,15 @@ public class NewsServiceImpl implements NewsService {
     // if the latest draft exist return it , else return the article
     DraftPage latestDraft = noteService.getLatestDraftPageByUserAndTargetPageAndLang(Long.parseLong(parentPageId),
                                                                                      currentIdentityId,
-                                                                                     null);
+                                                                                     lang);
     if (latestDraft == null) {
-      return buildArticle(parentPageId);
+      return buildArticle(parentPageId, lang, true);
     }
     News draftArticle = buildDraftArticle(latestDraft.getId(), currentIdentityId);
-    // set always the article id to use it to fetch the article if the draft not
-    // exist
-    draftArticle.setId(parentPageId);
+
+    draftArticle.setId(latestDraft.getId());
+    draftArticle.setTargetPageId(latestDraft.getTargetPageId());
+    draftArticle.setLang(latestDraft.getLang());
     return draftArticle;
   }
 
@@ -2263,37 +1993,6 @@ public class NewsServiceImpl implements NewsService {
     newsProperties.put(SCHEDULE_POST_DATE, startPublishedDateString);
   }
 
-  private boolean isSameIllustration(String newsDraftId, String newsArticleId) throws ObjectNotFoundException,
-                                                                               FileStorageException {
-
-    News news = getNewsArticleById(newsArticleId);
-    if (news == null || news.getIllustration() == null) {
-      return false;
-    }
-    NewsLatestDraftObject draftObject = new NewsLatestDraftObject(NEWS_METADATA_LATEST_DRAFT_OBJECT_TYPE,
-                                                                  newsDraftId,
-                                                                  newsArticleId,
-                                                                  Long.parseLong(news.getSpaceId()));
-    MetadataItem draftMetadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, draftObject)
-                                                    .stream()
-                                                    .findFirst()
-                                                    .orElse(null);
-    if (draftMetadataItem == null) {
-      throw new ObjectNotFoundException("Metadata items not found for news draft " + newsDraftId);
-    }
-
-    // Retrieve illustration ID from metadata
-    Map<String, String> draftProperties = draftMetadataItem.getProperties();
-    if (draftProperties != null) {
-      String draftIllustrationId = draftProperties.getOrDefault(NEWS_ILLUSTRATION_ID, null);
-      FileItem fileItem = fileService.getFile(Long.parseLong(draftIllustrationId));
-      if (fileItem != null) {
-        return Arrays.equals(fileItem.getAsByte(), news.getIllustration());
-      }
-    }
-    return false;
-  }
-
   private News postScheduledArticle(News news) throws ObjectNotFoundException {
     NewsPageObject newsPageObject = new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
                                                        news.getId(),
@@ -2313,7 +2012,7 @@ public class NewsServiceImpl implements NewsService {
       String poster = identityManager.getOrCreateUserIdentity(news.getAuthor()).getId();
       Date updateDate = Calendar.getInstance().getTime();
       metadataItem.setUpdatedDate(updateDate.getTime());
-      metadataService.updateMetadataItem(metadataItem, Long.parseLong(poster));
+      metadataService.updateMetadataItem(metadataItem, Long.parseLong(poster), false);
       news.setSchedulePostDate(null);
       return news;
     }
@@ -2323,26 +2022,59 @@ public class NewsServiceImpl implements NewsService {
     return null;
   }
 
-  private Map<String, String> getArticleIllustrationInfo(News news) {
-    Map<String, String> illustrationInfo = new HashMap<>();
-    if (news.getIllustration() != null) {
-      PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(news.getId()), null);
-      if (pageVersion != null) {
-        MetadataItem metadataItem =
-                                  metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
-                                                                                      new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
-                                                                                                                pageVersion.getId(),
-                                                                                                                null,
-                                                                                                                Long.parseLong(news.getSpaceId())))
-                                                 .stream()
-                                                 .findFirst()
-                                                 .orElse(null);
-        if (metadataItem != null && metadataItem.getProperties() != null && !metadataItem.getProperties().isEmpty()) {
-          illustrationInfo.put(NEWS_ILLUSTRATION_ID, metadataItem.getProperties().get(NEWS_ILLUSTRATION_ID));
-          illustrationInfo.put(NEWS_UPLOAD_ID, metadataItem.getProperties().get(NEWS_UPLOAD_ID));
-        }
+  private News addNewArticleVersionWithLang(News news, Identity versionCreator) throws Exception {
+    News existingNews = getNewsArticleById(news.getId());
+    String newsId = news.getTargetPageId() != null ? news.getTargetPageId() : news.getId();
+    Page existingPage = noteService.getNoteById(newsId);
+    if (existingPage != null) {
+      existingPage.setLang(news.getLang());
+      existingPage = noteService.updateNote(existingPage, PageUpdateType.EDIT_PAGE_CONTENT_AND_TITLE, versionCreator);
+      news.setPublicationState(POSTED);
+      // update the metadata item
+      MetadataItem metadataItem = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE, newsId, null, Long.parseLong(existingNews.getSpaceId()))).stream().findFirst().orElse(null);
+      if (metadataItem != null) {
+        Calendar calendar = Calendar.getInstance();
+        metadataItem.setUpdatedDate(calendar.getTime().getTime());
+        metadataService.updateMetadataItem(metadataItem, Long.parseLong(identityManager.getOrCreateUserIdentity(versionCreator.getUserId()).getId()), false);
+      }
+      existingPage.setTitle(news.getTitle());
+      existingPage.setContent(news.getBody());
+      NotePageProperties properties = news.getProperties();
+      if (properties != null) {
+        properties.setDraft(false);
+      }
+      existingPage.setProperties(properties);
+      noteService.createVersionOfNote(existingPage, versionCreator.getUserId());
+      news.setIllustrationURL(NewsUtils.buildIllustrationUrl(news.getProperties(), news.getLang()));
+      DraftPage draftPage = noteService.getLatestDraftPageByTargetPageAndLang(Long.parseLong(newsId), news.getLang());
+      if (draftPage != null) {
+        deleteDraftArticle(draftPage.getId(), draftPage.getAuthor());
+      }
+      NewsUtils.broadcastEvent(NewsUtils.ADD_ARTICLE_TRANSLATION, versionCreator, news);
+      String newsTranslationId = news.getId().concat("-").concat(news.getLang());
+      indexingService.index(NewsIndexingServiceConnector.TYPE, newsTranslationId);
+      return news;
+    }
+    return null;
+  }
+
+  private List<String> getArticleAttachmentIdsToShare(long spaceId, long articlePageId) {
+    List<String> attachmentIds = new ArrayList<>();
+    PageVersion pageVersion = noteService.getPublishedVersionByPageIdAndLang(articlePageId, null);
+    NewsPageVersionObject newsPageVersionObject = new NewsPageVersionObject(NEWS_METADATA_PAGE_VERSION_OBJECT_TYPE,
+            pageVersion.getId(),
+            null,
+            spaceId);
+    List<MetadataItem> newsPageVersionMetadataItems = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY,
+            newsPageVersionObject);
+    Map<String, String> newsPageVersionMetadataItemProperties = newsPageVersionMetadataItems.get(0).getProperties();
+    if (!MapUtils.isEmpty(newsPageVersionMetadataItems.get(0).getProperties())) {
+
+      if (newsPageVersionMetadataItemProperties.containsKey(NEWS_ATTACHMENTS_IDS)
+              && newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS) != null) {
+        attachmentIds.addAll(List.of(newsPageVersionMetadataItemProperties.get(NEWS_ATTACHMENTS_IDS).split(";")));
       }
     }
-    return illustrationInfo;
+    return attachmentIds;
   }
 }
